Phase 2 completed. Flex layout & responsive.

--- a/src/index.html
+++ b/src/index.html
@@ -10,7 +10,7 @@
 
 
   <body>
-    <div id="wrapper">
+
 
       <div class="header">
         <div class="budget">
@@ -53,79 +53,57 @@
 
 
       <div class="transactions">
+
         <div class="income">
           <h2 class="income__title">Income</h2>
-
           <div class="income__list">
 
-<!--
-            <div class="item" id="income-0">
-              <div class="item__description">Salary</div>
-
-              <div class="amount">
-                <div class="item__value">+ 2,100.00</div>
-                <div class="item__delete">
-                  <button class="item__delete--btn">
-                  <i class="ion-ios-close-outline"></i>
-                </button>
-                </div>
-
+            <div class="item" id="inc-0">
+              <div class="item__description">Salary</div><div class="amount">
+                <div class="item__value">+ 1200</div>
+                <div class="item__delete"><button class="item__delete--btn"><i class="ion-ios-close-outline"></i></button></div>
               </div>
             </div>
 
-            <div class="item" id="income-%id%">
-              <div class="item__description">%description%</div>
-              <div class="amount">
-                <div class="item__value">%value%</div>
-                <div class="item__delete">
-                  <button class="item__delete--btn"><i class="ion-ios-close-outline"></i></button>
-                </div>
+            <div class="item" id="inc-1">
+              <div class="item__description">Project</div><div class="amount">
+                <div class="item__value">+ 1400</div>
+                <div class="item__delete"><button class="item__delete--btn"><i class="ion-ios-close-outline"></i></button></div>
               </div>
             </div>
--->
-<!--            <div class="item" id="income-%id%"><div class="item__description">%description%</div><div class="amount"><div class="item__value">%value%</div><div class="item__delete"><button class="item__delete--btn"><i class="ion-ios-close-outline"></i></button></div></div></div></div></div>-->
+
 
           </div>
         </div>
 
         <div class="expenses">
           <h2 class="expenses__title">Expenses</h2>
-
           <div class="expenses__list">
 
-
-<!--
-            <div class="item" id="expense-0">
-              <div class="item__description">Apartment rent</div>
-              <div class="amount">
-                <div class="item__value">- 900.00</div>
-                <div class="item__percentage">21%</div>
-                <div class="item__delete">
-                  <button class="item__delete--btn"><i class="ion-ios-close-outline"></i></button>
-                </div>
-              </div>
+          <div class="item" id="exp-2">
+            <div class="item__description">Food</div>
+            <div class="amount">
+              <div class="item__value">- 150</div>
+              <div class="item__percentage">21%</div>
+              <div class="item__delete"><button class="item__delete--btn"><i class="ion-ios-close-outline"></i></button></div>
             </div>
+          </div>
 
-            <div class="item" id="expense-1">
-              <div class="item__description">Grocery shopping</div>
-              <div class="amount">
-                <div class="item__value">- 435.28</div>
-                <div class="item__percentage">10%</div>
-                <div class="item__delete">
-                  <button class="item__delete--btn"><i class="ion-ios-close-outline"></i></button>
-                </div>
-              </div>
+          <div class="item" id="exp-3">
+            <div class="item__description">Car</div>
+            <div class="amount">
+              <div class="item__value">- 319</div>
+              <div class="item__percentage">21%</div>
+              <div class="item__delete"><button class="item__delete--btn"><i class="ion-ios-close-outline"></i></button></div>
             </div>
--->
-
-<!--            <div class="item" id="expense-%id%"><div class="item__description">%description%</div><div class="amount"><div class="item__value">%value%</div><div class="item__percentage">21%</div><div class="item__delete"><button class="item__delete--btn"><i class="ion-ios-close-outline"></i></button></div></div></div>-->
-
+          </div>
 
           </div>
         </div>
-      </div>
 
-    </div><!-- END wrapper -->
+      </div><!-- END transactions -->
+
+
     <script src="app.js"></script>
   </body>
 </html>
