Phase 3 complete - Success & Error alerts

--- a/src/index.html
+++ b/src/index.html
@@ -51,6 +51,11 @@
         </div>
       </div>
 
+      <div class="alerts">
+        <div class="alerts__msg-error">Test</div>
+        <div class="alerts__msg-success"></div>
+      </div>
+
 
       <div class="transactions">
 
@@ -58,45 +63,13 @@
           <h2 class="income__title">Income</h2>
           <div class="income__list">
 
-            <div class="item" id="inc-0">
-              <div class="item__description">Salary</div><div class="amount">
-                <div class="item__value">+ 1200</div>
-                <div class="item__delete"><button class="item__delete--btn"><i class="ion-ios-close-outline"></i></button></div>
-              </div>
-            </div>
-
-            <div class="item" id="inc-1">
-              <div class="item__description">Project</div><div class="amount">
-                <div class="item__value">+ 1400</div>
-                <div class="item__delete"><button class="item__delete--btn"><i class="ion-ios-close-outline"></i></button></div>
-              </div>
-            </div>
-
-
           </div>
         </div>
+
 
         <div class="expenses">
           <h2 class="expenses__title">Expenses</h2>
           <div class="expenses__list">
-
-          <div class="item" id="exp-2">
-            <div class="item__description">Food</div>
-            <div class="amount">
-              <div class="item__value">- 150</div>
-              <div class="item__percentage">21%</div>
-              <div class="item__delete"><button class="item__delete--btn"><i class="ion-ios-close-outline"></i></button></div>
-            </div>
-          </div>
-
-          <div class="item" id="exp-3">
-            <div class="item__description">Car</div>
-            <div class="amount">
-              <div class="item__value">- 319</div>
-              <div class="item__percentage">21%</div>
-              <div class="item__delete"><button class="item__delete--btn"><i class="ion-ios-close-outline"></i></button></div>
-            </div>
-          </div>
 
           </div>
         </div>
