--- a/src/index.html
+++ b/src/index.html
@@ -5,76 +5,66 @@
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:100,300,400,600" rel="stylesheet" type="text/css">
     <link href="http://code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css" rel="stylesheet" type="text/css">
     <link type="text/css" rel="stylesheet" href="styles.css">
-    <title>Budgety</title>
+    <title>JSBudget</title>
   </head>
 
 
   <body>
+    <div class="menu">
+      <a href="#" class="menu__login" id="menu__login--link">Login</a>
+      <a href="#" class="menu__logout" id="menu__logout--link">Logout</a>
+      <a href="#" class="menu__register" id="menu__register--link">Register</a>
+    </div>
 
 
-      <div class="header">
-        <div class="budget">
-          <div class="budget__title">
-            Available Budget in <span class="budget__title--month">%Month%</span>:
+    <div class="header">
+      <div class="budget">
+        <div class="budget__title">
+          Available Budget in <span class="budget__title--month">%Month%</span>:
+        </div>
+
+        <div class="budget__value">+ 2,345.64</div>
+
+        <div class="budget__income">
+          <div class="budget__income--text">Income</div>
+          <div class="amounts">
+            <div class="budget__income--value">+ 4,300.00</div>
+            <div class="budget__income--percentage">&nbsp;</div>
           </div>
+        </div>
 
-          <div class="budget__value">+ 2,345.64</div>
-
-          <div class="budget__income">
-            <div class="budget__income--text">Income</div>
-            <div class="amounts">
-              <div class="budget__income--value">+ 4,300.00</div>
-              <div class="budget__income--percentage">&nbsp;</div>
-            </div>
-          </div>
-
-          <div class="budget__expenses">
-            <div class="budget__expenses--text">Expenses</div>
-            <div class="amounts">
-              <div class="budget__expenses--value">- 1,954.36</div>
-              <div class="budget__expenses--percentage">45%</div>
-            </div>
+        <div class="budget__expenses">
+          <div class="budget__expenses--text">Expenses</div>
+          <div class="amounts">
+            <div class="budget__expenses--value">- 1,954.36</div>
+            <div class="budget__expenses--percentage">45%</div>
           </div>
         </div>
       </div>
+    </div>
 
 
-      <div class="transaction__control">
-        <div class="transaction__control--container add">
-            <select class="add__type">
-              <option value="inc" selected>+</option>
-              <option value="exp">-</option>
-            </select>
-            <input type="text" class="add__description" placeholder="Add description">
-            <input type="number" class="add__value" placeholder="Value">
-            <button class="add__btn"><i class="ion-ios-checkmark-outline"></i></button>
-        </div>
+    <div class="transaction__control">
+      <div class="transaction__control--container add">
+          <select class="add__type">
+            <option value="inc" selected>+</option>
+            <option value="exp">-</option>
+          </select>
+          <input type="text" class="add__description" placeholder="Add description">
+          <input type="number" class="add__value" placeholder="Value">
+          <button class="add__btn"><i class="ion-ios-checkmark-outline"></i></button>
       </div>
+    </div>
 
-      <div class="alerts">
-        <div class="alerts__msg-error">Test</div>
-        <div class="alerts__msg-success"></div>
-      </div>
-
-
-      <div class="transactions">
-
-        <div class="income">
-          <h2 class="income__title">Income</h2>
-          <div class="income__list">
-
-          </div>
-        </div>
+    <div class="alerts">
+      <div class="alerts__msg-error">Test</div>
+      <div class="alerts__msg-success"></div>
+    </div>
 
 
-        <div class="expenses">
-          <h2 class="expenses__title">Expenses</h2>
-          <div class="expenses__list">
+    <div class="transactions">
 
-          </div>
-        </div>
-
-      </div><!-- END transactions -->
+    </div><!-- END transactions/content_area -->
 
 
     <script src="app.js"></script>
