--- a/src/pages/lost_password.html
+++ b/src/pages/lost_password.html
@@ -5,20 +5,20 @@
       <h2>Lost Password?</h2>
 
     <div class="form__box-row">
-      <label for="username">Username: </label>
-      <input id="username" type="text">
+      <label for="username">Username:</label>
+      <input id="username" type="text" required>
     </div>
 
     <div class="form__box-row">
-      <label for="email">Email: </label>
-      <input id="email" type="email">
+      <label for="email">Email:</label>
+      <input id="email" type="email" required>
     </div>
 
     <div class="form__box-row">
       <button class="btn" id="lost_password_submit_btn">Submit</button>
     </div>
 
-    <div class="form__box-row">
+    <div class="form__box-btn-row">
       <a href="#" id="login_link">Login</a>
       <a href="#" id="register_link">Register</a>
     </div>
