--- a/src/pages/register.html
+++ b/src/pages/register.html
@@ -6,30 +6,30 @@
       <h2>Registration</h2>
 
     <div class="form__box-row">
-      <label for="username">Username: </label>
-      <input id="username" type="text">
+      <label for="username">Username:</label>
+      <input id="username" type="text" required>
     </div>
 
     <div class="form__box-row">
-      <label for="email">Email: </label>
-      <input id="email" type="email">
+      <label for="email">Email:</label>
+      <input id="email" type="email" required>
     </div>
 
     <div class="form__box-row">
-      <label for="password">Password: </label>
-      <input id="password" type="password">
+      <label for="password">Password:</label>
+      <input id="password" type="password" required>
     </div>
 
     <div class="form__box-row">
-      <label for="conpassword">Password: </label>
-      <input id="conpassword" type="password" placeholder="re-enter your password">
+      <label for="conpassword">Password:</label>
+      <input id="conpassword" type="password" required placeholder="re-enter your password">
     </div>
 
     <div class="form__box-row">
       <button class="btn" id="register_submit_btn">Register</button>
     </div>
 
-    <div class="form__box-row">
+    <div class="form__box-btn-row">
       <a href="#" id="login_link">Login</a>
       <a href="#" id="lost_password_link">Lost Password?</a>
     </div>
