--- a/src/pages/login.html
+++ b/src/pages/login.html
@@ -1,4 +1,4 @@
-<div id="page_cover"></div>
+
 <div class="form__box" id="box_content">
 
   <form class="login_form">
@@ -6,20 +6,20 @@
       <h2>Login</h2>
 
     <div class="form__box-row">
-      <label for="username">Username: </label>
-      <input id="username" type="text">
+      <label for="username">Username:</label>
+      <input id="username" type="text"  required>
     </div>
 
     <div class="form__box-row">
-      <label for="password">Password: </label>
-      <input id="password" type="password">
+      <label for="password">Password:</label>
+      <input id="password" type="password" required>
     </div>
 
     <div class="form__box-row">
       <button class="btn" id="login_submit_btn">Login</button>
     </div>
 
-    <div class="form__box-row">
+    <div class="form__box-btn-row">
       <a href="#" id="register_link">Register</a>
       <a href="#" id="lost_password_link">Lost Password?</a>
     </div>
