Better error reporting in looks and functionality.

--- a/src/index.html
+++ b/src/index.html
@@ -62,9 +62,13 @@
       </div>
     </div>
 
-    <div class="alerts">
-      <div class="alerts__msg-error">Test</div>
-      <div class="alerts__msg-success"></div>
+   <!-- Error/Success Alerts -->
+    <div class="alerts alertErrorDiv">
+      <div id="errorAlert" class="alerts__msg-error">What a Failure</div>
+    </div>
+
+    <div class="alerts alertSuccessDiv">
+      <div id="successAlert" class="alerts__msg-success">Well done thataboy!</div>
     </div>
 
 
