Added build to gulpfile, cleaned up some files.

--- a/src/index.html
+++ b/src/index.html
@@ -16,7 +16,7 @@
         <h1>JSBudget</h1>
       </div>
       <nav class="menu">
-        <a href="#" class="menu__show_date" id="menu__show_date--link">Date:  </a><span class="menu__date">ON</span>
+        <a href="#" class="menu__show_date" id="menu__show_date--link">Date:  </a><span id="menu__date--toggle" class="menu__date">ON</span>
         <a href="#" class="menu__login" id="menu__login--link">Login</a>
         <a href="#" class="menu__logout" id="menu__logout--link">Logout</a>
         <a href="#" class="menu__register" id="menu__register--link">Register</a>
